--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -2,25 +2,45 @@
   border-radius: 30px;
   height: 5vh;
   width: 20vw;
-  border: 1px solid black;
+  border: 1px solid rgba(0,0,0,0.3);
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  padding-left: 0.5vw;
+  padding-left: 0.6vw;
 }
 
 .searchform {
   display: flex;
   justify-content: space-between;
-  height: 100%;
+  height: 90%;
 }
 
 .searchinput {
   border: none;
   width: 16vw;
+  /* background-color: none; */
   /* display: flex; */
   /* flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start; */
+}
+
+.searchinput:focus {
+  outline: none;
+}
+
+.searchbutton {
+  outline: none;
+  color: white;
+  cursor: pointer;
+  background: none;
+  background-color: #FF385C;
+  /* all: unset; */
+  border: none;
+  border-radius: 50%;
+  height: 4vh;
+  width: 4vh;
+  margin-left: 1vw;
+  margin-top: 0.1vh;
 }
