--- a/frontend/src/components/SpotsContainer/SpotsContainer.module.css
+++ b/frontend/src/components/SpotsContainer/SpotsContainer.module.css
@@ -9,6 +9,8 @@
   column-gap: 30px;
   row-gap: 50px;
   justify-content: center;
+  padding-right: 35px;
+  padding-left: 35px;
   /* margin-left: 3vw;
   margin-right: 3vw; */
   /* padding-top: 3vh; */
