--- a/frontend/src/components/DeleteBookingModal/DeleteBookingModal.module.css
+++ b/frontend/src/components/DeleteBookingModal/DeleteBookingModal.module.css
@@ -19,6 +19,19 @@
   border-radius: 15px;
   height: 3vh;
   width: 4vw;
-  /* display: flex; */
-  /* flex-direction: row; */
+  margin-top: 0.5vh;
+}
+
+/* .deleteDiv {
+  height: 5vh;
+  width: 2vw;
+} */
+
+.profileDeleteDivs {
+  height: 20vh;
+  width: 10vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
