--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -24,4 +24,10 @@
   border-radius: 5%;
   /* display: flex;
   align-items: center; */
+  /* height: 20vh;
+  width: 10vw; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
