--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -19,6 +19,11 @@
   justify-content: space-between;
 }
 
+.aboutMeDiv {
+  display: flex;
+  justify-content: space-between;
+}
+
 .HomeDiv {
   color: black;
   position: absolute;
@@ -43,9 +48,15 @@
   position: absolute;
   right: 3vw;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
+
+/* .Login > div {
+  display: flex;
+  justify-content: center;
+} */
 
 .CourtListing {
   margin-right: 1vw;
@@ -103,7 +114,7 @@
 
 .Login .demobutton {
   height: 5vh;
-  width: 4vw;
+  width: 100%;
   margin-right: 1vw;
   cursor: pointer;
   border: none;
