--- a/frontend/src/components/SpotsContainer/SpotsContainer.module.css
+++ b/frontend/src/components/SpotsContainer/SpotsContainer.module.css
@@ -46,6 +46,7 @@
   text-decoration: none;
   font-weight: bold;
   padding-top: 0.5vh;
+  margin-bottom: 0.3vh;
 }
 
 .nameDiv2 {
@@ -53,4 +54,17 @@
   display: flex;
   text-decoration: none;
   font-size: 0.8rem;
+}
+
+.priceDiv {
+  width: 300px;
+  display: flex;
+  text-decoration: none;
+  font-size: 1rem;
+  margin-bottom: 0.2vh;
+}
+
+.numberSpots {
+  top: 10vh;
+  position: absolute;
 }
