--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  box-shadow: 0px 3px 2px rgba(211,211,211,0.5);
 }
 
 .Login {
