--- a/frontend/src/components/SearchContainer/SearchContainer.module.css
+++ b/frontend/src/components/SearchContainer/SearchContainer.module.css
@@ -53,13 +53,14 @@
   text-decoration: none;
   color: rgba(0,0,0,0.7);
   padding-bottom: 2vh;
+  height: 100%;
 }
 
 .nameDiv {
-  display: flex;
+  /* display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-start; */
   height: 40vh;
   padding-left: 1vw;
 }
@@ -87,4 +88,35 @@
   text-decoration: none;
   font-size: 1rem;
   margin-bottom: 0.2vh;
+}
+
+.ratingDiv {
+  width: 300px;
+  display: flex;
+  /* align-items: flex-end; */
+  /* margin-top: 25vh; */
+  font-size: 1rem;
+  height: 20vh;
+  /* display: flex;
+  align-items: flex-end; */
+  margin-top: 15vh;
+}
+
+.ratingtextDiv {
+  margin-left: 0.2vw;
+  font-size: 1rem;
+  font-weight: 300;
+  height: 20vh;
+  display: flex;
+  align-items: flex-end;
+}
+
+.infoDiv {
+  height: 20vh;
+}
+
+.starDiv {
+  display: flex;
+  /* align-items: flex-end;
+  margin-bottom: 1vh; */
 }
