--- a/frontend/src/components/SingleSpot/SingleSpot.module.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.module.css
@@ -1,4 +1,4 @@
-  .singleSpot {
+.singleSpot {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -21,9 +21,11 @@
 .singleSpotContainer {
   /* right: 0px; */
   /* position: absolute; */
-  width: 200px;
-  height: 200px;
+  width: 112.6vh;
+  height: 50vh;
   display: flex;
+  justify-content: flex-start;
+  margin-bottom: 5vh;
   /* overflow: hidden; */
 }
 
@@ -111,5 +113,11 @@
   display: flex;
   flex-direction: row;
   width: 112.6vh;
+  max-width: 112.6vh;
   justify-content: space-between;
+}
+
+.reviewForm {
+  max-width: 60vh;
+  width: 60vh;
 }
