--- a/frontend/src/components/BookingForm/BookingForm.module.css
+++ b/frontend/src/components/BookingForm/BookingForm.module.css
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: center;
   font-size: 0.8rem;
+  color: #FF385C;
+  font-style: italic;
 }
 
 .reviewForm {
@@ -44,4 +46,12 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+
+.errors {
+  margin-bottom: 15px;
+  list-style-type: none;
+  font-size: 14px;
+  font-style: italic;
+  color: #FF385C;
 }
